[package]
name        = "flow_between"
version     = "0.2.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Vector animation editor"
include     = [ "Cargo.toml", "LICENSE", "src/**/*", "png/**/*" ]

[features]
gtk         = [ "flo_gtk_ui" ]
http        = [ "flo_http_ui", "flo_http_ui_actix", "actix-web", "actix-rt" ]
cocoa       = [ "flo_cocoa_pipe", "flo_cocoa_ui", "flo_cocoa" ]

[dependencies]
flo_animation       = { path = "animation",         version="0.2" }
flo_sqlite_storage  = { path = "sqlite_storage",    version="0.1" }
flo_binding         = { git = "https://github.com/Logicalshift/flo_binding", version = "1.2" }

flo_ui_files        = { path = "ui_files",          version="0.2" }
flo_ui              = { path = "ui",                version="0.2" }
flo_canvas          = { path = "canvas",            version="0.2" }
flo_logging         = { path = "logging",           version="0.2" }
flo                 = { path = "flo",               version="0.2" }

flo_gtk_ui          = { path = "user_interfaces/gtk_ui",        version="0.2", optional = true }
flo_http_ui         = { path = "user_interfaces/http_ui",       version="0.2", optional = true }
flo_http_ui_actix   = { path = "user_interfaces/http_ui_actix", version="0.2", optional = true }
flo_cocoa_ui        = { path = "user_interfaces/cocoa_ui",      version="0.2", optional = true }
flo_cocoa_pipe      = { path = "user_interfaces/cocoa_pipe",    version="0.2", optional = true }
flo_cocoa           = { path = "user_interfaces/flo_cocoa",     version="0.2", optional = true }

serde               = "1.0"
serde_derive        = "1.0"
serde_json          = "1.0"
log                 = "0.4"
env_logger          = "0.6"
pretty_env_logger   = "0.3"
futures             = "0.3"

actix-web           = { version = "2.0", optional = true }
actix-rt            = { version = "1.0", optional = true }
