[package]
name        = "flow_between"
version     = "0.2.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Vector animation editor"
include     = [ "Cargo.toml", "LICENSE", "src/**/*", "*.md", "*.sh", "png/**/*" ]

[features]
gtk                     = [ "flo_gtk_ui" ]
http                    = [ "flo_http_ui", "flo_http_ui_actix", "actix-web", "actix-rt" ]
cocoa                   = [ "flo_cocoa_pipe", "flo_cocoa_ui", "flo_cocoa" ]
cmdline                 = [ "flo_diag", "flo_commands" ]

[dependencies]
flo_animation           = "0.2"
flo_sqlite_storage      = "0.1"
flo_binding             = "2.0"

flo_ui_files            = "0.2"
flo_ui                  = "0.2"
flo_logging             = "0.2"
flo                     = "0.2"
flo_canvas              = "0.4"
flo_canvas_animation    = "0.3"

flo_gtk_ui              = { version="0.2", optional = true }
flo_http_ui             = { version="0.2", optional = true }
flo_http_ui_actix       = { version="0.2", optional = true }
flo_cocoa_ui            = { version="0.2", optional = true }
flo_cocoa_pipe          = { version="0.2", optional = true }
flo_cocoa               = { version="0.2", optional = true }

flo_diag                = { version="0.2", optional = true }
flo_commands            = { version="0.2", optional = true }

serde                   = "1.0"
serde_derive            = "1.0"
serde_json              = "1.0"
log                     = "0.4"
env_logger              = "0.7"
pretty_env_logger       = "0.4"
futures                 = "0.3"

actix-web               = { version = "2.0", optional = true }
actix-rt                = { version = "1.0", optional = true }

[patch.crates-io]
flo_animation           = { path = "./animation" }
flo_canvas_animation    = { path = "./canvas_animation" }
flo_sqlite_storage      = { path = "./sqlite_storage" }
flo_ui_files            = { path = "./ui_files" }
flo_ui                  = { path = "./ui" }
flo_logging             = { path = "./logging" }
flo_float_encoder       = { path = "./float_encoder" }
flo_static_files        = { path = "./static_files" }
flo                     = { path = "./flo" }

flo_gtk_ui              = { path = "./user_interfaces/gtk_ui" }
flo_http_ui             = { path = "./user_interfaces/http_ui" }
flo_http_ui_actix       = { path = "./user_interfaces/http_ui_actix" }
flo_cocoa_ui            = { path = "./user_interfaces/cocoa_ui" }
flo_cocoa_pipe          = { path = "./user_interfaces/cocoa_pipe" }
flo_cocoa               = { path = "./user_interfaces/flo_cocoa" }

flo_diag                = { path = "./cmdline/diag" }
flo_commands            = { path = "./cmdline/commands" }

desync                  = { git = "https://github.com/Logicalshift/desync", branch = "v0.7.0" }
flo_binding             = { git = "https://github.com/Logicalshift/flo_binding", branch = "v2.1" }
flo_curves              = { git = "https://github.com/Logicalshift/flo_curves", branch = "v0.6" }
flo_stream              = { git = "https://github.com/Logicalshift/flo_stream", branch = "v0.7" }
flo_rope                = { git = "https://github.com/Logicalshift/flo_rope", branch = "v0.2" }

flo_canvas              = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render              = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render_canvas       = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render_gl_offscreen = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
# flo_draw                = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }

# flo_canvas              = { path = "../flo_draw/canvas" }
# flo_render              = { path = "../flo_draw/render" }
# flo_render_canvas       = { path = "../flo_draw/render_canvas" }
# flo_render_gl_offscreen = { path = "../flo_draw/render_gl_offscreen" }
