[package]
name        = "flo_anim_sqlite"
version     = "0.1.0"
authors     = ["Andrew Hunter <andrew@logicalshift.co.uk>"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "SQLite storage for FlowBetween animations"

include     = [ "Cargo.toml", "src/**/*", "sql/**/*" ]

[dependencies]
flo_canvas          = { path = "../canvas", version = "^0.1.0" }
flo_animation       = { path = "../animation", version = "^0.1.0" }

itertools           = "^0.7.4"
rusqlite            = { version = "0.11", features = ["bundled"] }
futures             = "^0.1.17"
desync              = "^0.1.2"
