[package]
name        = "flo_animation"
version     = "0.2.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Describes a FlowBetween animation"
edition     = "2018"

[dependencies]
flo_canvas          = { path = "../canvas", version = "0.2" }
flo_curves          = { git = "https://github.com/Logicalshift/flo_curves", version = "0.4" }
flo_float_encoder   = { path = "../float_encoder", version = "0.1" }
flo_stream          = { git = "https://github.com/Logicalshift/flo_stream", version = "0.5" }

futures             = "0.3"
itertools           = "0.9"
typemap             = "0.3"
modifier            = "0.1"
serde               = "1.0"
serde_derive        = "1.0"
smallvec            = "1.1"
desync              = { git = "https://github.com/Logicalshift/desync", branch = "v0.7.0", version = "0.7" }
lazy_static         = "1.2"
