[package]
name                    = "flo_animation"
version                 = "0.2.0"
authors                 = ["Andrew Hunter"]
license                 = "Apache-2.0"
repository              = "https://github.com/Logicalshift/flowbetween"
description             = "Describes a FlowBetween animation"
edition                 = "2018"

[dependencies]
flo_canvas              = "0.4"
flo_curves              = "0.6"
flo_float_encoder       = "0.1"
flo_stream              = "0.7"
flo_canvas_animation    = "0.3"

futures                 = "0.3"
futures-timer           = "3.0"
itertools               = "0.9"
typemap                 = "0.3"
modifier                = "0.1"
serde                   = "1.0"
serde_json              = "1.0"
serde_derive            = "1.0"
smallvec                = "1.7"
desync                  = "0.7"
lazy_static             = "1.4"
log                     = "0.4"
uuid                    = { version = "0.8", features = [ "v4" ] }
