[package]
name        = "flo_binding"
version     = "0.1.3"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Declarative binding library for Rust"

[dependencies]
desync          = "0.4"
futures         = "^0.1.17"
