[package]
name            = "flo_binding"
version         = "0.1.3"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
repository      = "https://github.com/Logicalshift/flowbetween"
documentation   = "http://docs.rs/flo_binding/"
description     = "Declarative binding library for Rust"
readme          = "README.md"

keywords        = ["reactive", "parametric", "binding", "event"]
categories      = ["algorithms","asynchronous","data-structures","gui"]

[dependencies]
desync          = "0.4"
futures         = "^0.1.17"
