[package]
name        = "canvas"
version     = "0.1.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"

[dependencies]
curves          = { path = "../curves" }

futures         = "^0.1.17"
desync          = { git = "https://github.com/logicalshift/desync", branch = "develop" }
rust-hsluv      = "0.1.3"
serde           = "^1.0.0"
serde_derive    = "^1.0.0"
