[package]
name        = "flo_canvas"
version     = "0.1.1"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Library for describing graphics context drawing actions without requiring a specific implementation"

[dependencies]
flo_curves      = { git = "https://github.com/Logicalshift/flo_curves", version = "^0.2.2" }

futures         = "^0.1.17"
desync          = "0.4"
rust-hsluv      = "0.1.3"
serde           = "^1.0.0"
serde_derive    = "^1.0.0"
