[package]
name        = "flo_canvas"
version     = "0.2.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Library for describing graphics context drawing actions without requiring a specific implementation"

[dependencies]
flo_curves      = { git = "https://github.com/Logicalshift/flo_curves", version = "0.3" }

futures         = "0.3"
desync          = "0.5"
rust-hsluv      = "0.1.3"
serde           = "1.0"
serde_derive    = "1.0"
