[package]
name        = "flo_curves"
version     = "0.1.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Library for manipulating Bezier curves"

[dependencies]
rulinalg    = "0.4.2"
itertools   = "0.7"
roots       = "0.0.4"
