[package]
name            = "flo_curves"
version         = "0.2.0"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
repository      = "https://github.com/Logicalshift/flowbetween"
description     = "Library for manipulating Bezier curves"
documentation   = "http://docs.rs/flo_curves/"
readme          = "README.md"

[dependencies]
itertools   = "0.7"
roots       = "0.0.4"
