[package]
name                = "flo_draw"
version             = "0.1.0"
authors             = ["Andrew Hunter"]
license             = "Apache-2.0"
edition             = "2018"
repository          = "https://github.com/Logicalshift/flowbetween"
description         = "Quickly render 2D graphics to the screen"

[dependencies]
glutin              = "0.26.0"
flo_canvas          = { path = "../canvas", version = "0.2.0" }
flo_render          = { path = "../render", version = "0.1.0" }
flo_render_canvas   = { path = "../render_canvas", version = "0.1.0"}
