[package]
name                = "flo_draw"
version             = "0.1.0"
authors             = ["Andrew Hunter"]
license             = "Apache-2.0"
edition             = "2018"
readme              = "README.md"
repository          = "https://github.com/Logicalshift/flowbetween"
description         = "Quickly render 2D graphics to the screen"

[dependencies]
flo_canvas          = { path = "../canvas", version = "0.2.0" }
flo_stream          = { git = "https://github.com/Logicalshift/flo_stream", version = "0.5" }
flo_render          = { path = "../render", version = "0.1.0", features = [ "opengl" ] }
flo_render_canvas   = { path = "../render_canvas", version = "0.1.0"}
desync              = { git = "https://github.com/Logicalshift/desync", branch = "v0.7.0", version = "0.7" }

glutin              = "0.26.0"
lazy_static         = "1.2"
futures             = "0.3"
gl                  = "0.14"
