[package]
name                    = "flo"
version                 = "0.2.0"
authors                 = ["Andrew Hunter"]
license                 = "Apache-2.0"
edition                 = "2018"
repository              = "https://github.com/Logicalshift/flowbetween"
description             = "User interface description for FlowBetween"

include                 = [ "Cargo.toml", "src/**/*", "svg/**/*" ]

[dependencies]
flo_animation           = "0.2"
flo_curves              = "0.7"
flo_stream              = "0.7"
flo_binding             = "2.0"
flo_ui                  = "0.2"
flo_canvas              = "0.4"
flo_canvas_animation    = "0.3"
flo_ui_files            = "0.2"
flo_rope                = "0.2"
desync                  = "0.9"

strum                   = "0.23"
strum_macros            = "0.23"
lazy_static             = "1.2"
futures                 = "0.3"
itertools               = "0.9"
uuid                    = { version = "0.8", features = [ "v4" ] }
log                     = "0.4"
smallvec                = "1.7"
