[package]
name        = "flow_between"
version     = "0.3.0"
edition     = "2024"
authors     = ["Andrew Hunter"]
license     = "GPL-3.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Vector animation editor"

[dependencies]
flo_draw            = { version = "0.4", features = [ "render-software" ], default-features = false }
flo_svg             = "0.1"
flo_curves          = "0.8"

flo_binding         = "3.0"
flo_scene           = "0.3"
flo_scene_binding   = "0.3"
flo_scene_guest     = "0.3"
flo_stream          = "0.7"

futures             = "0.3"
serde               = { version = "1.0", features = [ "derive" ] }
postcard            = "1.1"
uuid                = { version = "1.0", features = [ "v4", "serde" ] }
egui                = { version = "0.33", default-features = false, features = [ "rayon", "default_fonts" ] }
rapier2d            = "0.26"
once_cell           = "1.21"
smallvec            = { version = "1.10", features = ["const_generics"] }
rusqlite            = { version = "0.39", features = ["bundled"] }
itertools           = "0.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "canvas_performance"
harness = false
