[package]
name        = "flow_between"
version     = "0.3.0"
edition     = "2024"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Vector animation editor"

[dependencies]
flo_draw            = { version = "0.4", features = [ "render-wgpu" ], default-features = false }
flo_curves          = "0.8"

flo_binding         = "3.0"
flo_scene           = "0.2"
flo_scene_guest     = "0.2"

futures             = "0.3"
serde               = { version = "1.0", features = [ "derive" ] }
uuid                = { version = "1.0", features = [ "v4", "serde" ] }
egui                = { version = "0.31", default-features = false, features = [ "rayon", "default_fonts" ] }
rapier2d            = "0.26"
once_cell           = "1.21"
smallvec            = { version = "1.10", features = ["const_generics"] }

[patch.crates-io]
flo_curves              = { git = "https://github.com/Logicalshift/flo_curves", branch = "v0.8" }

flo_binding             = { git = "https://github.com/Logicalshift/flo_binding", branch = "v3.0" }
flo_scene               = { git = "https://github.com/Logicalshift/flo_scene", branch = "v0.2" }
flo_scene_guest         = { git = "https://github.com/Logicalshift/flo_scene", branch = "v0.2" }

desync                  = { git = "https://github.com/Logicalshift/desync", branch = "v0.9" }

flo_draw                = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_canvas              = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_canvas_events       = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render              = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render_canvas       = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render_gl_offscreen = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render_software     = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }

# flo_draw                = { path = "../../flo_draw/draw"}
# flo_canvas              = { path = "../../flo_draw/canvas"}
# flo_canvas_events       = { path = "../../flo_draw/canvas_events"}
# flo_render              = { path = "../../flo_draw/render"}
# flo_render_canvas       = { path = "../../flo_draw/render_canvas"}
# flo_render_gl_offscreen = { path = "../../flo_draw/render_gl_offscreen"}
# flo_render_software     = { path = "../../flo_draw/render_software"}
