[package]
name        = "flo_gfx"
version     = "0.1.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Streaming API for the Rust GFX library"

include     = [ "Cargo.toml", "src/**/*", "svg/**/*" ]

[dependencies]
gfx         = "0.18"
