[package]
name        = "flo_gtk_ui"
version     = "0.1.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Gtk+ implementation pipe for flo_ui"

[dependencies]
flo_ui              = { path = "../ui", version = "^0.1.0" }
flo_canvas          = { path = "../canvas", version = "^0.1.0" }
flo_nanovg_canvas   = { path = "../nanovg_canvas", version = "^0.1.0" }

gtk                 = { version = "0.4.0", features = ["v3_20"] }
gdk                 = { version = "0.8.0", features = ["v3_12"] }
gdk-sys             = { version = "0.6.0", features = ["v3_12"] }
gdk-pixbuf          = "0.4.0"
gio                 = { version = "0.4.0", features = ["v2_34"] }
glib                = "0.5.0"
cairo-rs            = "0.4.0"
gl                  = "^0.10.0"
epoxy               = "^0.0.4"
shared_library      = ""
futures             = "^0.1.17"
anymap              = "^0.12.1"
itertools           = "^0.7.4"
time                = "0.1"
