[package]
name        = "flo_gtk_ui"
version     = "0.1.1"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Gtk+ implementation pipe for flo_ui"

[dependencies]
flo_ui              = { path = "../ui", version = "^0.1.0" }
flo_canvas          = { path = "../canvas", version = "^0.1.0" }
flo_nanovg_canvas   = { path = "../nanovg_canvas", version = "^0.1.0" }

gtk                 = { version = "0.5", features = ["v3_20"] }
gdk                 = { version = "0.9", features = ["v3_12"] }
gdk-sys             = { version = "0.7", features = ["v3_12"] }
gdk-pixbuf          = "0.5"
gio                 = { version = "0.5", features = ["v2_34"] }
glib                = "0.6"
cairo-rs            = "0.5"
gl                  = "0.11"
epoxy               = "0.1"
shared_library      = ""
futures             = "^0.1.17"
anymap              = "^0.12.1"
itertools           = "^0.8"
time                = "0.1"
nanovg              = { version = "1.0", features = ["gl3"] }
