[package]
name        = "http_ui"
version     = "0.1.0"
authors     = ["Andrew Hunter"]

[dependencies]
ui                  = { path = "../ui" }
binding             = { path = "../binding" }

serde               = "^1.0.0"
serde_json          = "^1.0.0"
serde_derive        = "^1.0.0"
svg                 = "^0.5.6"
uuid                = { version = "^0.4", features = [ "v4" ] }
iron                = "0.6"
mount               = { git = "https://github.com/iron/mount.git", rev="d30eeec" }
bodyparser          = { git = "https://github.com/iron/body-parser.git", rev="49ae53c" }
percent-encoding    = "^1.0.1"
futures             = "^0.1.17"
desync              = { git = "https://github.com/logicalshift/desync", branch = "develop" }
itertools           = "^0.7.2"
