[package]
name        = "flo_http_ui"
version     = "0.1.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "HTTP+HTML implementation pipe for flo_ui"

include     = [ "Cargo.toml", "src/**/*", "js/**/*" ]

[dependencies]
flo_ui              = { path = "../ui", version = "0.1.0" }
flo_binding         = { path = "../binding", version = "0.1.0" }
flo_canvas          = { path = "../canvas", version = "0.1.0" }

serde               = "^1.0.0"
serde_json          = "^1.0.0"
serde_derive        = "^1.0.0"
svg                 = "^0.5.6"
uuid                = { version = "^0.4", features = [ "v4" ] }
iron                = "0.6"
mount               = "0.4.0"
bodyparser          = "0.8.0"
percent-encoding    = "^1.0.1"
futures             = "^0.1.17"
desync              = "^0.1.2"
itertools           = "^0.7.4"
websocket           = { version = "^0.20.2", features = [ "async" ] }
tokio-core          = "^0.1"
hyper               = "^0.10.6"
bytes               = "^0.4"
