[package]
name        = "flo_http_ui"
version     = "0.1.1"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "HTTP+HTML implementation pipe for flo_ui"

include     = [ "Cargo.toml", "src/**/*", "js/**/*" ]

[dependencies]
flo_ui              = { path = "../ui", version = "0.1" }
flo_binding         = { path = "../binding", version = "0.1" }
flo_canvas          = { path = "../canvas", version = "0.1" }
flo_logging         = { path = "../logging", version = "0.1" }

serde               = "^1.0.0"
serde_json          = "^1.0.0"
serde_derive        = "^1.0.0"
svg                 = "^0.5.6"
uuid                = { version = "^0.6", features = [ "v4" ] }
percent-encoding    = "^1.0.1"
futures             = "^0.1.17"
desync              = "0.2"
itertools           = "^0.7.4"
bytes               = "^0.4"
