[package]
name        = "flo_logging"
version     = "0.2.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Pubsub logging framework"

[dependencies]
flo_stream      = { git = "https://github.com/Logicalshift/flo_stream", version = "0.5" }
desync          = { git = "https://github.com/Logicalshift/desync", branch = "v0.7.0", version = "0.7" }

futures         = "0.3"
lazy_static     = "1.2"
log             = "0.4"
