[package]
name        = "flo_nanovg_canvas"
version     = "0.1.1"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"

[dependencies]
flo_canvas  = { version = "^0.1.0", path="../canvas" }
nanovg      = { version = "^0.4.0" }
gl          = "^0.10.0"
