[package]
name        = "flo_render"
version     = "0.1.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Streaming API for rendering graphics on hardware"

include     = [ "Cargo.toml", "src/**/*", "shaders/**/*", "bindings/**/*", "build.rs" ]

[features]
opengl      = [ "gl" ]
osx-metal   = [ "metal" ]

[build-dependencies]
bindgen = "0.54"

[dependencies]
gl          = { version = "0.14", optional = true }
metal       = { version = "0.20", optional = true }
