[package]
name        = "flo_render_canvas"
version     = "0.1.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Converts flo_canvas streams to flo_render streams"

include     = [ "Cargo.toml", "src/**/*", "svg/**/*" ]

[dependencies]
flo_render  = { path = "../render", version = "0.1" }
flo_canvas  = { path = "../canvas", version = "0.2" }
lyon        = "0.15"
