[package]
name        = "flo_render_canvas"
version     = "0.1.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Converts flo_canvas streams to flo_render streams"

include     = [ "Cargo.toml", "src/**/*", "svg/**/*" ]

[dependencies]
flo_render  = { path = "../render", version = "0.1" }
flo_canvas  = { path = "../canvas", version = "0.2" }
flo_stream  = { git = "https://github.com/Logicalshift/flo_stream", version = "0.5" }
futures     = "0.3"
desync      = { git = "https://github.com/Logicalshift/desync", branch = "v0.7.0", version = "0.7" }
lyon        = "0.15"
num_cpus    = "1.13"
