[package]
name        = "flo_sqlite_storage"
version     = "0.1.0"
authors     = ["Andrew Hunter <andrew@logicalshift.co.uk>"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "SQLite storage for FlowBetween animations"

include     = [ "Cargo.toml", "src/**/*", "sql/**/*" ]

[dependencies]
flo_animation       = { path = "../animation", version = "0.2" }
flo_logging         = { path = "../logging", version = "0.2" }

rusqlite            = { version = "0.23", features = ["bundled"] }
futures             = "0.3"
desync              = { git = "https://github.com/Logicalshift/desync", branch = "v0.7.0", version = "0.7" }

[dev-dependencies]
flo_canvas          = { path = "../canvas", version = "0.2" }
flo_stream          = { git = "https://github.com/Logicalshift/flo_stream", version = "0.5" }
