[package]
name        = "flo_sqlite_storage"
version     = "0.1.0"
authors     = ["Andrew Hunter <andrew@logicalshift.co.uk>"]
license     = "Apache-2.0"
edition     = "2018"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "SQLite storage for FlowBetween animations"

include     = [ "Cargo.toml", "src/**/*", "sql/**/*" ]

[dependencies]
flo_animation       = "0.2"
flo_logging         = "0.2"

rusqlite            = { version = "0.27", features = ["bundled"] }
futures             = "0.3"
desync              = "0.8"

[dev-dependencies]
flo_canvas          = "0.4"
flo_stream          = "0.7"
