[package]
name        = "flo_static_files"
version     = "0.1.0"
authors     = ["Andrew Hunter"]
license     = "Apache-2.0"
repository  = "https://github.com/Logicalshift/flowbetween"
description = "Static files for FlowBetween's HTTP UI"

include     = [ "Cargo.toml", "src/**/*", "css/**/*", "fonts/**/*", "html/**/*", "js/**/*", "png/**/*", "svg/**/*" ]

[dependencies]
iron        = "0.6.0"
sha2        = "0.6.0"
