[package]
name            = "flo_stream"
version         = "0.1.0"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
repository      = "https://github.com/Logicalshift/flowbetween"

description     = "Pubsub and other streams for Rust futures"
documentation   = "http://docs.rs/desync/"
readme          = "README.md"
keywords        = ["pubsub", "futures", "concurrency"]
categories      = ["concurrency","asynchronous","algorithms","data-structures"]

[dependencies]
futures = "0.1"
